<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_clear_console"
        android:orderInCategory="100"
        android:title="@string/action_clear_console"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_engine"
        android:orderInCategory="200"
        android:title="@string/action_reset_engine"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="300"
        android:title="@string/action_clear_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_shortcut"
        android:orderInCategory="400"
        android:title="@string/action_create_shortcut"
        app:showAsAction="never" />
</menu>
